restore and cache renv env

--- a/.github/workflows/render-cv.yml
+++ b/.github/workflows/render-cv.yml
@@ -13,3 +13,15 @@ jobs:
         with:
           pandoc-version: '2.12'      
       - run: pandoc --version
+      
+      - name: Cache Renv packages
+        uses: actions/cache@v2
+        with:
+          path: $HOME/.local/share/renv
+          key: r-${{ hashFiles('renv.lock') }}
+          restore-keys: r-
+
+      - name: Install packages
+        run: |
+          R -e 'install.packages("renv")'
+          R -e 'renv::restore()'
