--- a/.github/workflows/render-cv.yml
+++ b/.github/workflows/render-cv.yml
@@ -4,6 +4,10 @@ jobs:
   render-cv:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2
+      - run: git branch --show-current
+    
       - uses: r-lib/actions/setup-r@v1
         with:
           r-version: '4.0.3'
@@ -13,15 +17,3 @@ jobs:
         with:
           pandoc-version: '2.12'      
       - run: pandoc --version
-      
-      - name: Cache Renv packages
-        uses: actions/cache@v2
-        with:
-          path: $HOME/.local/share/renv
-          key: r-${{ hashFiles('renv.lock') }}
-          restore-keys: r-
-
-      - name: Install packages
-        run: |
-          R -e 'install.packages("renv")'
-          R -e 'renv::restore()'
