restore and cache renv env

--- a/.github/workflows/render-cv.yml
+++ b/.github/workflows/render-cv.yml
@@ -17,3 +17,16 @@ jobs:
         with:
           pandoc-version: '2.12'      
       - run: pandoc --version
+      
+      - name: Cache Renv packages
+        uses: actions/cache@v2
+        with:
+          path: $HOME/.local/share/renv
+          key: r-${{ hashFiles('renv.lock') }}
+          restore-keys: r-
+
+      - name: Restore packages
+        shell: Rscript {0}
+        run: |
+          if (!requireNamespace("renv", quietly = TRUE)) install.packages("renv")
+          renv::restore()
