--- a/.github/workflows/render-cv.yml
+++ b/.github/workflows/render-cv.yml
@@ -18,6 +18,10 @@ jobs:
           pandoc-version: '2.12'      
       - run: pandoc --version
       
+      - name: Install libcurl-dev for r package curl
+        run: |
+          sudo apt-get install libcurl4-openssl-dev
+      
       - name: Cache Renv packages
         uses: actions/cache@v2
         with:
