--- a/.github/workflows/render-cv.yml
+++ b/.github/workflows/render-cv.yml
@@ -18,6 +18,9 @@ jobs:
           pandoc-version: '2.12'      
       - run: pandoc --version
       
+      - uses: r-lib/actions/setup-tinytex@v1
+      - run: tlmgr --version
+      
       - name: Install libcurl-dev for r package curl
         run: |
           sudo apt-get install libcurl4-openssl-dev
