invalidate renv cache
The cache of the renv's share folder is 0B. If this is due to caching after an unsuccessful restore, then invalidation should help.

--- a/.github/workflows/render-cv.yml
+++ b/.github/workflows/render-cv.yml
@@ -29,8 +29,8 @@ jobs:
         uses: actions/cache@v2
         with:
           path: $HOME/.local/share/renv
-          key: r-${{ hashFiles('renv.lock') }}
-          restore-keys: r-
+          key: renv-${{ hashFiles('renv.lock') }}
+          restore-keys: renv-
 
       - name: Restore packages
         shell: Rscript {0}
