--- a/.github/workflows/render-cv.yml
+++ b/.github/workflows/render-cv.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Cache Renv packages
         uses: actions/cache@v2
         with:
-          path: $HOME/.local/share/renv
+          path: ~/.local/share/renv
           key: renv-${{ hashFiles('renv.lock') }}
           restore-keys: renv-
 
